# a6-cw

./: .gitignore  README.md  nfw_theory.py  pyproject.toml  question1.ipynb  question2.ipynb
.github/workflows/: tests.yml
a6cw/: __init__.py  ellipticity.py  shear.py
data/: README.txt
docs/: conf.py  index.rst  package.md  performance.md  requirements.txt  tests.md
docs/api/: ellipticity.rst  index.rst  shear.rst
outputs/: README.txt
profiling/: run_profiling.py
report/: appendix.tex
tests/: test_ellipticity.py  test_shear.py
