[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "a6cw"
version = "1.0.0"
description = "Weak gravitational lensing analysis — A6 coursework"
authors = [{name = "Alex"}]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7",
    "sphinx-rtd-theme",
    "myst-parser",
    "sphinx-autodoc-typehints",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["a6cw*"]
