[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "a6cw"
version = "1.0.0"
description = "Weak gravitational lensing analysis — A6 coursework"
authors = [{name = "Alex Blake Martín"}]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    # galsim and numba are required at runtime but omitted here because they
    # carry compiled extensions that must be installed separately (see CI workflow).
    # nfw_theory is vendored as a repo-root .py file; it is not a PyPI package.
]

[project.optional-dependencies]
docs = [
    "sphinx>=7",
    "sphinx-rtd-theme",
    "myst-parser",
    "sphinx-autodoc-typehints",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["a6cw*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
minversion = "7"
